img要素以外のhtml要素完成

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 		<div class="st-headerSpMenu">
 			<nav class="st-headerSpMenuNav">
 				<ul class="st-headerSpMenuNavList">
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink"></a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink"></a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink"></a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink"></a></li>
-					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink"></a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">トップ</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">誕生の背景</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">クリームの特徴</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">お客様の声</a></li>
+					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">ショップ</a></li>
 				</ul>
-				<button class="sw-button"></button>
+				<a class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></あ>
 				<div class="st-headerSpMenuNavSns"><a href="" class="st-headerSpMenuNavSnsLink"><img src="" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="" class="st-headerSpMenuNavSnsLink"><img src="" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
 			</nav>
 		</div>
@@ -47,14 +47,16 @@
 		<section id="mv" class="lp-mv">
 			<div class="lp-mv__Inner">
 				<div class="lp-mv__InnerBox">
-					<h2 class="lp-mv__InnerBoxHead"><img src="" alt="" class="lp-mv__InnerBoxHeadImg"></h2>
+					<h2 class="lp-mv__InnerBoxHead"><img src="" alt="さようなら、冬
+						こんにちは、春" class="lp-mv__InnerBoxHeadImg"></h2>
 					<p class="lp-mv__InnerBoxText">手から先に訪れる、北海道のソメイヨシノと<br>
 						オオヤマザクラの春の香り</p>
 				</div>
 				<ul class="lp-mv__InnerList">
 					<li class="lp-mv__InnerListItem lp-mv__InnerListItem01">
 						<img src="" alt="" class="lp-mv__InnerListItemHandcream">
-						<img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01"><img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
+						<img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01">
+						<img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
 					</li>
 					<li class="lp-mv__InnerListItem lp-mv__InnerListItem02">
 						<img src="" alt="" class="lp-mv__InnerListItemHandcream">
@@ -81,9 +83,9 @@
 		</section>
 		<section id="spring" class="lp-spring">
 			<div class="lp-spring__inner">
-				<div class="lp-spring__innerText">そんな北海道の手荒れに、<br>
+				<h2 class="lp-spring__innerHead">そんな北海道の手荒れに、<br>
 					少しでも早く春に訪れるよう、<br>
-					私たちは立ち上がりました。</div>
+					私たちは立ち上がりました。</hq>
 				<img src="" alt="手" class="lp-spring__innerImg--hand">
 				<img src="" alt="桜" class="lp-spring__innerImg--sakura01">
 				<img src="" alt="桜" class="lp-spring__innerImg--sakura02">
@@ -91,11 +93,27 @@
 		</section>
 		<section id="catch" class="lp-catch">
 			<div class="lp-catch__inner">
-				<div class="lp-catch__innerTbox">
+				<p class="lp-catch__innerTbox">
 					<h2 class="lp-catch__innerTboxHead">
-						<img src="" alt="" class="lp-catch__innerTboxHeadImg">
+						<img src="" alt="手から、春を感じてみませんか。" class="lp-catch__innerTboxHeadImg">
 					</h2>
-					<p class="lp-catch__innerTboxText"></p>
+					<p class="lp-catch__innerTboxText">
+						冬を感じさせる手荒れをなくすと同時に、<br>
+						気分だけ先に春の桜の香りを味わってもらいたい…<br>
+						その願いで生まれたのが<br>
+						「北の春　ハンドクリーム」です。
+					</p>
+					<p class="lp-catch__innerTboxText">
+						北海道の桜の香りと、<br>
+						天然植物由来成分によるしっとり感が評判となり<br>
+						「北海道のお土産」と持ち帰った道外の方からも<br>
+						リピーターが続出した一品です。<br>
+					</p>
+					<p class="lp-catch__innerTboxText">
+						香り及び保湿成分が自然素材のため、
+						生産量に限りがございます。
+						ご注文はお早めにお願い致します。
+					</p>
 				</div>
 				<!-- バックグラウンドで設定 -->
 				<div class="lp-catch__innerIbox">
@@ -125,21 +143,31 @@
 		</section>
 		<section id="features" class="lp-features">
 			<div class="lp-features__inner">
-				<div class="lp-features__innerHead"></div>
-				<div class="lp-features__innerBox">
-					<img src="" alt="" class="lp-features__innerBoxImg">
-					<h3 class="lp-features__innerBoxHead"></h3>
-					<p class="lp-features__innerBoxText"></p>
+				<h2 class="lp-features__innerHead"><img src="" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
+
+				<div class="lp-features__innerBox lp-features__innerBox01">
+					<img src="" alt="桜のイメージ" class="lp-features__innerBoxImg">
+					<h3 class="lp-features__innerBoxHead">１．春を感じさせる、北海道の桜の香り！</h3>
+					<p class="lp-features__innerBoxText">ソメイヨシノ、オオヤマザクラの桜を使用した香りを使用しております（他の国産の桜の香りも使用しております）<br>
+						北海道の春の香りを、存分に感じてください。</p>
 				</div>
-				<div class="lp-features__innerBox">
-					<img src="" alt="" class="lp-features__innerBoxImg">
-					<h3 class="lp-features__innerBoxHead"></h3>
-					<p class="lp-features__innerBoxText"></p>
+				<div class="lp-features__innerBox lp-features__innerBox02">
+					<img src="" alt="ひまわりと白樺" class="lp-features__innerBoxImg">
+					<h3 class="lp-features__innerBoxHead">2．保湿成分は植物由来（北海道産含む）、<br>
+						鉱物油フリー</h3>
+					<p class="lp-features__innerBoxText">
+						保湿成分も北海道産の成分が含まれております。<br>
+ヒマワリ油（北海道産）、白樺樹液（北海道産）、ホホバオイル、ココナツオイル、シアバター配合でしっとりすべすべ！北海道の自然を思う存分感じてください。<br>
+※自然成分が多く含まれておりますので、開封後はなるべくお早めにご使用ください。
+					</p>
 				</div>
-				<div class="lp-features__innerBox">
-					<img src="" alt="" class="lp-features__innerBoxImg">
-					<h3 class="lp-features__innerBoxHead"></h3>
-					<p class="lp-features__innerBoxText"></p>
+				<div class="lp-features__innerBox lp-features__innerBox03">
+					<img src="" alt="手" class="lp-features__innerBoxImg">
+					<h3 class="lp-features__innerBoxHead">3.低刺激性、合成着色料不使用</h3>
+					<p class="lp-features__innerBoxText">肌の負担になる成分をなるべく減らしました。<br>
+						敏感肌の方や、お子さんでも安心してお使いいただけます。<br>
+						アレルギーテスト済みです。※<br>
+						※すべての人にアレルギーが起こらないわけではありません。お肌に合わないときはご使用をおやめください。</p>
 				</div>
 				<img src="" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura01">
 				<img src="" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura02">
@@ -147,8 +175,53 @@
 			</div>
 
 		</section>
-		<section id="voice" class="lp-voice"></section>
-		<section id="shop" class="lp-shop"></section>
+		<section id="voice" class="lp-voice">
+			<div class="lp-voice__inner">
+				<h2 class="lp-voice__innerHead"><img src="" alt="お客様の声" class="lp-voice__innerHeadimg"></h2>
+				<div class="lp-voice__innerBox">
+					<img src="" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerBox">
+					<h3 class="lp-voice__innerName">北海道代表　北野春子さん（仮名）</h3>
+					<p class="lp-voice__innertext">
+						手の乾燥と湿疹に悩まされていた私にとって、冬は「嫌い」以外の何物でもありませんでした。北海道の冬、長すぎますよね（泣）しかしこのクリームが、私の冬に対するイメージを変えてくれました。手がすべすべになって手荒れがなくなった分、心が晴れやかになりました。この桜のクリームの香りを感じるたび、冬でも北海道ももう春なのかと、錯覚してしまいます（笑）
+					</p>
+				</div>
+				<div class="lp-voice__innerBox">
+					<img src="" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerBox">
+					<h3 class="lp-voice__innerName">道外代表（東京都）　東川夏美さん（仮名）</h3>
+					<p class="lp-voice__innertext">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
+				</div>
+			</div>
+			<small class="lp-voice__annotation">※このインタビュー及び名前は架空のものです</small>
+		</section>
+		<section id="shop" class="lp-shop">
+			<div class="lp-shop__inner">
+				<h2 class="lp-shop__innerHead"><img src="" alt="ショップ" class="lp-shop__innerHeadImg"></h2>
+				<div class="lp-shop__innerStore">
+					<p class="lp-shop__innerStoreText">
+						北海道の<br>
+						各コンビニエンスストア・<br>
+						ドラッグストア・<br>
+						PLALA・北海道ハンド・<br>
+						Raftなどにて販売しております。
+					</p>
+					<a class="sw-btn store pc">
+						<span class="sw-btn__inner">ショップを探す</span>
+					<a>
+				</div>
+				<div class="lp-shop__innerOnline">
+					<p class="lp-shop__innerOnlineText">
+						もちろんオンラインでも<br>
+						お買い求め<br>
+						いただけます。
+					</p>
+					<a class="sw-btn buy pc">
+						<span class="sw-btn__inner">ご購入はこちら</span>
+					</a>
+				</div>
+			</div>
+			<img src="" alt="桜01" class="lp-shop__Sakura lp-shop__Sakura01">
+			<img src="" alt="桜02" class="lp-shop__Sakura lp-shop__Sakura02">
+		</section>
 		<section id="sales" class="lp-sales">
 			<div class="lp-sales__inner">
 				<div class="lp-sales__innerTbox">
