--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title></title>
+	<title>北の春 ハンドクリーム</title>
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
 	<header class="st-header">
@@ -261,7 +262,8 @@
             </div>
         </nav>
     </div>
-    <div class="st-footer__copyright">&copy;KITANOHARU</div>
+		<div class="st-footer__copyright">&copy;KITANOHARU</div>
 </footer>
+<script src="script.js"></script>
 </body>
 </html>
