htmlコーディング＆スライス終了

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header class="st-header">
     <div class="st-header__inner">
-        <h1 class="st-header__innerLogo"><a href="index.html" class="st-header__logoLink"><img src="../../img/logo.png" alt="北の春 ハンドクリーム" class="st-header__logoLinkImg"></a></h1>
+        <h1 class="st-header__innerLogo"><a href="index.html" class="st-header__logoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__logoLinkImg"></a></h1>
         <nav class="st-header__innerNav">
             <ul class="st-header__innerNavList">
                 <li class="st-header__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">トップ</a></li>
@@ -24,7 +24,7 @@
 	</header>
 	<header class="st-headerSp">
     <div class="st-headerSp__inner">
-				<h1 class="st-headerSp__innerLogo"><a href="index.html" class="st-headerSp__logoLink"><img src="../../img/logo.png" alt="北の春 ハンドクリーム" class="st-header__logoLinkImg"></a></h1>
+				<h1 class="st-headerSp__innerLogo"><a href="index.html" class="st-headerSp__logoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__logoLinkImg"></a></h1>
 				<button id="hamburgerBtn" class="st-headerSp__innerButton"><span class="st-headerSp__innerButtonBar"></span></button>
 		</div>
 		<div class="st-headerSpMenu">
@@ -48,20 +48,21 @@
 		<section id="mv" class="lp-mv">
 			<div class="lp-mv__Inner">
 				<div class="lp-mv__InnerBox">
-					<h2 class="lp-mv__InnerBoxHead"><img src="" alt="さようなら、冬
+					<h2 class="lp-mv__InnerBoxHead"><img src="img/lp-mv__InnerBoxHeadImg.png" alt="さようなら、冬
 						こんにちは、春" class="lp-mv__InnerBoxHeadImg"></h2>
 					<p class="lp-mv__InnerBoxText">手から先に訪れる、北海道のソメイヨシノと<br>
 						オオヤマザクラの春の香り</p>
 				</div>
 				<ul class="lp-mv__InnerList">
 					<li class="lp-mv__InnerListItem lp-mv__InnerListItem01">
-						<img src="" alt="" class="lp-mv__InnerListItemHandcream">
-						<img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01">
-						<img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
+						<img src="img/handcream.png" alt="" class="lp-mv__InnerListItemHandcream">
+						<img src="img/sakura01_1.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01">
+						<img src="img/sakura01_2.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
 					</li>
 					<li class="lp-mv__InnerListItem lp-mv__InnerListItem02">
-						<img src="" alt="" class="lp-mv__InnerListItemHandcream">
-						<img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01"><img src="" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
+						<img src="img/lp-mv__hand.png" alt="" class="lp-mv__InnerListItemHand">
+						<img src="img/sakura01_1.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01">
+						<img src="img/sakura01_2.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
 					</li>
 					<li class="lp-mv__InnerListItem lp-mv__InnerListItem03"></li>
 				</ul>
@@ -72,7 +73,7 @@
 			<div class="lp-winter__inner">
 				<div class="lp-winter__inner">
 					<div class="lp-winter__innerBox">
-						<h2 class="lp-winter__innerBoxHead"><img src="" alt="～北海道の春は、遠い～" class="lp-winter__innerBoxHeadImg"></h2>
+						<h2 class="lp-winter__innerBoxHead"><img src="img/lp-winter__innerBoxHeadImg.png" alt="～北海道の春は、遠い～" class="lp-winter__innerBoxHeadImg"></h2>
 						<p class="lp-winter__innerBoxText">北海道は日本の中で最も冬が長く、<br>
 							手荒れの季節も最も長いのです。</p>
 						<p class="lp-winter__innerBoxText">もちろん桜も、咲くのが最も遅い。<br>
@@ -87,16 +88,16 @@
 				<h2 class="lp-spring__innerHead">そんな北海道の手荒れに、<br>
 					少しでも早く春に訪れるよう、<br>
 					私たちは立ち上がりました。</hq>
-				<img src="" alt="手" class="lp-spring__innerImg--hand">
-				<img src="" alt="桜" class="lp-spring__innerImg--sakura01">
-				<img src="" alt="桜" class="lp-spring__innerImg--sakura02">
+				<img src="img/lp-spring__innerImg--hand.png" alt="手" class="lp-spring__innerImg--hand">
+				<img src="img/lp-spring__innerImg--sakura01.png" alt="桜" class="lp-spring__innerImg--sakura01">
+				<img src="img/lp-spring__innerImg--sakura02.png" alt="桜" class="lp-spring__innerImg--sakura02">
 			</div>
 		</section>
 		<section id="catch" class="lp-catch">
 			<div class="lp-catch__inner">
 				<p class="lp-catch__innerTbox">
 					<h2 class="lp-catch__innerTboxHead">
-						<img src="" alt="手から、春を感じてみませんか。" class="lp-catch__innerTboxHeadImg">
+						<img src="img/lp-catch__innerTboxHeadImg.png" alt="手から、春を感じてみませんか。" class="lp-catch__innerTboxHeadImg">
 					</h2>
 					<p class="lp-catch__innerTboxText">
 						冬を感じさせる手荒れをなくすと同時に、<br>
@@ -138,22 +139,22 @@
 					<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
 				</div>
 				<div class="lp-sales__innerIbox">
-					<img src="" class="lp-sales__innerIboximg">
+					<img src="img/handcream.png" class="lp-sales__innerIboximg">
 				</div>
 			</div>
 		</section>
 		<section id="features" class="lp-features">
 			<div class="lp-features__inner">
-				<h2 class="lp-features__innerHead"><img src="" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
+				<h2 class="lp-features__innerHead"><img src="img/lp-features__innerHeadImg.png" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
 
 				<div class="lp-features__innerBox lp-features__innerBox01">
-					<img src="" alt="桜のイメージ" class="lp-features__innerBoxImg">
+					<img src="img/lp-features__innerBoxImg01.png" alt="桜のイメージ" class="lp-features__innerBoxImg lp-features__innerBoxImg01">
 					<h3 class="lp-features__innerBoxHead">１．春を感じさせる、北海道の桜の香り！</h3>
 					<p class="lp-features__innerBoxText">ソメイヨシノ、オオヤマザクラの桜を使用した香りを使用しております（他の国産の桜の香りも使用しております）<br>
 						北海道の春の香りを、存分に感じてください。</p>
 				</div>
 				<div class="lp-features__innerBox lp-features__innerBox02">
-					<img src="" alt="ひまわりと白樺" class="lp-features__innerBoxImg">
+					<img src="img/lp-features__innerBoxImg02.png" alt="ひまわりと白樺" class="lp-features__innerBoxImg lp-features__innerBoxImg02">
 					<h3 class="lp-features__innerBoxHead">2．保湿成分は植物由来（北海道産含む）、<br>
 						鉱物油フリー</h3>
 					<p class="lp-features__innerBoxText">
@@ -163,31 +164,31 @@
 					</p>
 				</div>
 				<div class="lp-features__innerBox lp-features__innerBox03">
-					<img src="" alt="手" class="lp-features__innerBoxImg">
+					<img src="img/lp-features__innerBoxImg03.png" alt="手" class="lp-features__innerBoxImg lp-features__innerBoxImg03">
 					<h3 class="lp-features__innerBoxHead">3.低刺激性、合成着色料不使用</h3>
 					<p class="lp-features__innerBoxText">肌の負担になる成分をなるべく減らしました。<br>
 						敏感肌の方や、お子さんでも安心してお使いいただけます。<br>
 						アレルギーテスト済みです。※<br>
 						※すべての人にアレルギーが起こらないわけではありません。お肌に合わないときはご使用をおやめください。</p>
 				</div>
-				<img src="" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura01">
-				<img src="" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura02">
-				<img src="" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura03">
+				<img src="img/lp-features__innerImgSakura01.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura01">
+				<img src="img/lp-features__innerImgSakura02.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura02">
+				<img src="img/lp-features__innerImgSakura03.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura03">
 			</div>
 
 		</section>
 		<section id="voice" class="lp-voice">
 			<div class="lp-voice__inner">
-				<h2 class="lp-voice__innerHead"><img src="" alt="お客様の声" class="lp-voice__innerHeadimg"></h2>
+				<h2 class="lp-voice__innerHead"><img src="img/lp-voice__innerHeadImg.png" alt="お客様の声" class="lp-voice__innerHeadImg"></h2>
 				<div class="lp-voice__innerBox">
-					<img src="" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerBox">
+					<img src="img/lp-voice__innerBoxImg01.png" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerBox lp-voice__innerBoxImg01">
 					<h3 class="lp-voice__innerName">北海道代表　北野春子さん（仮名）</h3>
 					<p class="lp-voice__innertext">
 						手の乾燥と湿疹に悩まされていた私にとって、冬は「嫌い」以外の何物でもありませんでした。北海道の冬、長すぎますよね（泣）しかしこのクリームが、私の冬に対するイメージを変えてくれました。手がすべすべになって手荒れがなくなった分、心が晴れやかになりました。この桜のクリームの香りを感じるたび、冬でも北海道ももう春なのかと、錯覚してしまいます（笑）
 					</p>
 				</div>
 				<div class="lp-voice__innerBox">
-					<img src="" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerBox">
+					<img src="img/lp-voice__innerBoxImg02.png" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerBoxImg lp-voice__innerBoxImg02">
 					<h3 class="lp-voice__innerName">道外代表（東京都）　東川夏美さん（仮名）</h3>
 					<p class="lp-voice__innertext">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
 				</div>
@@ -196,7 +197,7 @@
 		</section>
 		<section id="shop" class="lp-shop">
 			<div class="lp-shop__inner">
-				<h2 class="lp-shop__innerHead"><img src="" alt="ショップ" class="lp-shop__innerHeadImg"></h2>
+				<h2 class="lp-shop__innerHead"><img src="img/lp-shop__innerHead.png" alt="ショップ" class="lp-shop__innerHeadImg"></h2>
 				<div class="lp-shop__innerStore">
 					<p class="lp-shop__innerStoreText">
 						北海道の<br>
@@ -220,8 +221,8 @@
 					</a>
 				</div>
 			</div>
-			<img src="" alt="桜01" class="lp-shop__Sakura lp-shop__Sakura01">
-			<img src="" alt="桜02" class="lp-shop__Sakura lp-shop__Sakura02">
+			<img src="img/sakura01_1.png" alt="桜01" class="lp-shop__Sakura lp-shop__Sakura01">
+			<img src="img/sakura01_2.png" alt="桜02" class="lp-shop__Sakura lp-shop__Sakura02">
 		</section>
 		<section id="sales" class="lp-sales">
 			<div class="lp-sales__inner">
@@ -257,8 +258,8 @@
                 <li class="st-footer__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">プライバシーポリシー</a></li>
             </ul>
             <div class="st-footer__innerNavSNS">
-                <a href="#" class="st-footer__innerNavSNSLink"><img src="../../img/twitter.png" alt=""></a>
-                <a href="#" class="st-footer__innerNavSNSLink"><img src="../../img/instagram.png" alt=""></a>
+                <a href="#" class="st-footer__innerNavSNSLink"><img src="img/twitter.png" alt=""></a>
+                <a href="#" class="st-footer__innerNavSNSLink"><img src="img/instagram.png" alt=""></a>
             </div>
         </nav>
     </div>
