winterまで（２セクション目）

--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
 	</header>
 	<main>
 		<section id="mv" class="lp-mv">
-			<div class="lp-mv__Inner">
-				<div class="lp-mv__InnerBox">
-					<h2 class="lp-mv__InnerBoxHead"><img src="img/lp-mv__InnerBoxHeadImg.png" alt="さようなら、冬
-						こんにちは、春" class="lp-mv__InnerBoxHeadImg"></h2>
-					<p class="lp-mv__InnerBoxText">手から先に訪れる、北海道のソメイヨシノと<br>
+			<div class="lp-mv__inner">
+				<div class="lp-mv__innerBox">
+					<h2 class="lp-mv__innerBoxHead"><img src="img/lp-mv__InnerBoxHeadImg.png" alt="さようなら、冬
+						こんにちは、春" class="lp-mv__innerBoxHeadImg"></h2>
+					<p class="lp-mv__innerBoxText">手から先に訪れる、北海道のソメイヨシノと<br>
 						オオヤマザクラの春の香り</p>
 				</div>
-				<ul class="lp-mv__InnerList">
-					<li class="lp-mv__InnerListItem lp-mv__InnerListItem01">
-						<img src="img/handcream.png" alt="" class="lp-mv__InnerListItemHandcream">
-						<img src="img/sakura01_1.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01">
-						<img src="img/sakura01_2.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
-					</li>
-					<li class="lp-mv__InnerListItem lp-mv__InnerListItem02">
-						<img src="img/lp-mv__hand.png" alt="" class="lp-mv__InnerListItemHand">
-						<img src="img/sakura01_1.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura01">
-						<img src="img/sakura01_2.png" alt="" class="lp-mv__InnerListItemSakura lp-mv__InnerListItemSakura02">
-					</li>
-					<li class="lp-mv__InnerListItem lp-mv__InnerListItem03"></li>
-				</ul>
 			</div>
+			<ul class="lp-mv__list">
+				<li class="lp-mv__listItem lp-mv__listItem01">
+					<img src="img/handcream.png" alt="" class="lp-mv__listItemHandcream">
+					<img src="img/sakura01_1.png" alt="" class="lp-mv__listItemSakura lp-mv__listItemSakura01">
+					<img src="img/sakura01_2.png" alt="" class="lp-mv__listItemSakura lp-mv__listItemSakura02">
+				</li>
+				<li class="lp-mv__listItem lp-mv__listItem02">
+					<img src="img/lp-mv__listItemHand.png" alt="" class="lp-mv__listItemHand">
+					<img src="img/sakura01_1.png" alt="" class="lp-mv__listItemSakura lp-mv__listItemSakura01">
+					<img src="img/sakura01_2.png" alt="" class="lp-mv__listItemSakura lp-mv__listItemSakura02">
+				</li>
+				<li class="lp-mv__listItem lp-mv__listItem03"></li>
+			</ul>
 
 		</section>
 		<section id="winter" class="lp-winter">
@@ -88,7 +88,7 @@
 			<div class="lp-spring__inner">
 				<h2 class="lp-spring__innerHead">そんな北海道の手荒れに、<br>
 					少しでも早く春に訪れるよう、<br>
-					私たちは立ち上がりました。</hq>
+					私たちは立ち上がりました。</h2>
 				<img src="img/lp-spring__innerImg--hand.png" alt="手" class="lp-spring__innerImg--hand">
 				<img src="img/lp-spring__innerImg--sakura01.png" alt="桜" class="lp-spring__innerImg--sakura01">
 				<img src="img/lp-spring__innerImg--sakura02.png" alt="桜" class="lp-spring__innerImg--sakura02">
@@ -242,7 +242,7 @@
 					<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
 				</div>
 				<div class="lp-sales__innerIbox">
-					<img src="" class="lp-sales__innerIboximg">
+					<img src="img/handcream.png" class="lp-sales__innerIboximg">
 				</div>
 			</div>
 
