PC半分強まで進める

--- a/index.html
+++ b/index.html
@@ -96,51 +96,55 @@
 		</section>
 		<section id="catch" class="lp-catch">
 			<div class="lp-catch__inner">
-				<p class="lp-catch__innerTbox">
-					<h2 class="lp-catch__innerTboxHead">
-						<img src="img/lp-catch__innerTboxHeadImg.png" alt="手から、春を感じてみませんか。" class="lp-catch__innerTboxHeadImg">
-					</h2>
-					<p class="lp-catch__innerTboxText">
+				<div class="lp-catch__innerText">
+					<div class="lp-catch__innerTextBox">
+					<h2 class="lp-catch__innerTextBoxHead">
+							<img src="img/lp-catch__innerTboxHeadImg.png" alt="手から、春を感じてみませんか。" class="lp-catch__innerTextBoxHeadImg">
+						</h2>
+						<p class="lp-catch__innerTextBoxText">
 						冬を感じさせる手荒れをなくすと同時に、<br>
-						気分だけ先に春の桜の香りを味わってもらいたい…<br>
-						その願いで生まれたのが<br>
-						「北の春　ハンドクリーム」です。
-					</p>
-					<p class="lp-catch__innerTboxText">
-						北海道の桜の香りと、<br>
-						天然植物由来成分によるしっとり感が評判となり<br>
-						「北海道のお土産」と持ち帰った道外の方からも<br>
-						リピーターが続出した一品です。<br>
-					</p>
-					<p class="lp-catch__innerTboxText">
-						香り及び保湿成分が自然素材のため、
-						生産量に限りがございます。
-						ご注文はお早めにお願い致します。
-					</p>
+							気分だけ先に春の桜の香りを味わってもらいたい…<br>
+							その願いで生まれたのが<br>
+							「北の春　ハンドクリーム」です。
+						</p>
+						<p class="lp-catch__innerTextBoxText">
+							北海道の桜の香りと、<br>
+							天然植物由来成分によるしっとり感が評判となり<br>
+							「北海道のお土産」と持ち帰った道外の方からも<br>
+							リピーターが続出した一品です。<br>
+						</p>
+						<p class="lp-catch__innerTextBoxText">
+							香り及び保湿成分が自然素材のため、<br>
+							生産量に限りがございます。<br>
+							<strong class="lp-catch__innerTextBoxTextStrong">ご注文はお早めにお願い致します。</strong>
+						</strong>
+					</div>
 				</div>
 				<!-- バックグラウンドで設定 -->
-				<div class="lp-catch__innerIbox">
+				<div class="lp-catch__innerImg">
 				</div>
 			</div>
 		</section>
 		<section id="sales" class="lp-sales">
 			<div class="lp-sales__inner">
-				<div class="lp-sales__innerTbox">
-					<h2 class="lp-sales__innerTboxHead">
-						北の春　ハンドクリーム
-					</h2>
-					<p class="lp-sales__innerTboxText">通販価格1500円（税込・送料込み）
-						2本以上ご購入の場合100円引き<br>
-						（1本あたり1500円→1400円）<br>
-						店頭参考価格：1300円</p>
-					<p class="lp-sales__innerTboxText">
-						※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
-（6本以上注文する場合は再度申し込み願います）
-					</p>
-					<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
+				<div class="lp-sales__innerText">
+					<div class="lp-sales__innerTextBox">
+						<h2 class="lp-sales__innerTextBoxHead">
+							北の春　ハンドクリーム
+						</h2>
+						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）
+							2本以上ご購入の場合100円引き<br>
+							（1本あたり1500円→1400円）<br>
+							店頭参考価格：1300円</p>
+						<p class="lp-sales__innerTextBoxText">
+							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
+	（6本以上注文する場合は再度申し込み願います）
+						</p>
+						<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
+					</div>					
 				</div>
 				<div class="lp-sales__innerIbox">
-					<img src="img/handcream.png" class="lp-sales__innerIboximg">
+					<img src="img/handcream.png" class="lp-sales__innerIboxImg">
 				</div>
 			</div>
 		</section>
