3/28　進捗分　storeの途中（PC）

--- a/index.html
+++ b/index.html
@@ -152,29 +152,31 @@
 			<div class="lp-features__inner">
 				<h2 class="lp-features__innerHead"><img src="img/lp-features__innerHeadImg.png" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
 
-				<div class="lp-features__innerBox lp-features__innerBox01">
-					<img src="img/lp-features__innerBoxImg01.png" alt="桜のイメージ" class="lp-features__innerBoxImg lp-features__innerBoxImg01">
-					<h3 class="lp-features__innerBoxHead">１．春を感じさせる、北海道の桜の香り！</h3>
-					<p class="lp-features__innerBoxText">ソメイヨシノ、オオヤマザクラの桜を使用した香りを使用しております（他の国産の桜の香りも使用しております）<br>
-						北海道の春の香りを、存分に感じてください。</p>
-				</div>
-				<div class="lp-features__innerBox lp-features__innerBox02">
-					<img src="img/lp-features__innerBoxImg02.png" alt="ひまわりと白樺" class="lp-features__innerBoxImg lp-features__innerBoxImg02">
-					<h3 class="lp-features__innerBoxHead">2．保湿成分は植物由来（北海道産含む）、<br>
-						鉱物油フリー</h3>
-					<p class="lp-features__innerBoxText">
-						保湿成分も北海道産の成分が含まれております。<br>
-ヒマワリ油（北海道産）、白樺樹液（北海道産）、ホホバオイル、ココナツオイル、シアバター配合でしっとりすべすべ！北海道の自然を思う存分感じてください。<br>
-※自然成分が多く含まれておりますので、開封後はなるべくお早めにご使用ください。
-					</p>
-				</div>
-				<div class="lp-features__innerBox lp-features__innerBox03">
-					<img src="img/lp-features__innerBoxImg03.png" alt="手" class="lp-features__innerBoxImg lp-features__innerBoxImg03">
-					<h3 class="lp-features__innerBoxHead">3.低刺激性、合成着色料不使用</h3>
-					<p class="lp-features__innerBoxText">肌の負担になる成分をなるべく減らしました。<br>
-						敏感肌の方や、お子さんでも安心してお使いいただけます。<br>
-						アレルギーテスト済みです。※<br>
-						※すべての人にアレルギーが起こらないわけではありません。お肌に合わないときはご使用をおやめください。</p>
+				<div class="lp-features__innerFlex">
+					<div class="lp-features__innerFlexBox lp-features__innerFlexBox01">
+						<img src="img/lp-features__innerFlexBoxImg01.png" alt="桜のイメージ" class="lp-features__innerFlexBoxImg lp-features__innerFlexBoxImg01">
+						<h3 class="lp-features__innerFlexBoxHead">１．春を感じさせる、北海道の桜の香り！</h3>
+						<p class="lp-features__innerFlexBoxText">ソメイヨシノ、オオヤマザクラの桜を使用した香りを使用しております（他の国産の桜の香りも使用しております）<br>
+							北海道の春の香りを、存分に感じてください。</p>
+					</div>
+					<div class="lp-features__innerFlexBox lp-features__innerFlexBox02">
+						<img src="img/lp-features__innerFlexBoxImg02.png" alt="ひまわりと白樺" class="lp-features__innerFlexBoxImg lp-features__innerFlexBoxImg02">
+						<h3 class="lp-features__innerFlexBoxHead">2．保湿成分は植物由来（北海道産含む）、<br>
+							鉱物油フリー</h3>
+						<p class="lp-features__innerFlexBoxText">
+							保湿成分も北海道産の成分が含まれております。<br>
+	ヒマワリ油（北海道産）、白樺樹液（北海道産）、ホホバオイル、ココナツオイル、シアバター配合でしっとりすべすべ！北海道の自然を思う存分感じてください。<br>
+	※自然成分が多く含まれておりますので、開封後はなるべくお早めにご使用ください。
+						</p>
+					</div>
+					<div class="lp-features__innerFlexBox lp-features__innerFlexBox03">
+						<img src="img/lp-features__innerFlexBoxImg03.png" alt="手" class="lp-features__innerFlexBoxImg lp-features__innerFlexBoxImg03">
+						<h3 class="lp-features__innerFlexBoxHead">3.低刺激性、合成着色料不使用</h3>
+						<p class="lp-features__innerFlexBoxText">肌の負担になる成分をなるべく減らしました。<br>
+							敏感肌の方や、お子さんでも安心してお使いいただけます。<br>
+							アレルギーテスト済みです。※<br>
+							※すべての人にアレルギーが起こらないわけではありません。お肌に合わないときはご使用をおやめください。</p>
+					</div>
 				</div>
 				<img src="img/lp-features__innerImgSakura01.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura01">
 				<img src="img/lp-features__innerImgSakura02.png" alt="" class="lp-features__innerImgSakura lp-features__innerImgSakura02">
@@ -185,17 +187,19 @@
 		<section id="voice" class="lp-voice">
 			<div class="lp-voice__inner">
 				<h2 class="lp-voice__innerHead"><img src="img/lp-voice__innerHeadImg.png" alt="お客様の声" class="lp-voice__innerHeadImg"></h2>
-				<div class="lp-voice__innerBox">
-					<img src="img/lp-voice__innerBoxImg01.png" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerBox lp-voice__innerBoxImg01">
-					<h3 class="lp-voice__innerName">北海道代表　北野春子さん（仮名）</h3>
-					<p class="lp-voice__innertext">
-						手の乾燥と湿疹に悩まされていた私にとって、冬は「嫌い」以外の何物でもありませんでした。北海道の冬、長すぎますよね（泣）しかしこのクリームが、私の冬に対するイメージを変えてくれました。手がすべすべになって手荒れがなくなった分、心が晴れやかになりました。この桜のクリームの香りを感じるたび、冬でも北海道ももう春なのかと、錯覚してしまいます（笑）
-					</p>
-				</div>
-				<div class="lp-voice__innerBox">
-					<img src="img/lp-voice__innerBoxImg02.png" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerBoxImg lp-voice__innerBoxImg02">
-					<h3 class="lp-voice__innerName">道外代表（東京都）　東川夏美さん（仮名）</h3>
-					<p class="lp-voice__innertext">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
+				<div class="lp-voice__innerFlex">
+					<div class="lp-voice__innerFlexBox">
+						<img src="img/lp-voice__innerFlexBoxImg01.png" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerFlexBoxImg lp-Evoice__innerFlexBoxImg01">
+						<h3 class="lp-voice__innerFlexBoxName">北海道代表　北野春子さん（仮名）</h3>
+						<p class="lp-voice__innerFlexBoxtext">
+							手の乾燥と湿疹に悩まされていた私にとって、冬は「嫌い」以外の何物でもありませんでした。北海道の冬、長すぎますよね（泣）しかしこのクリームが、私の冬に対するイメージを変えてくれました。手がすべすべになって手荒れがなくなった分、心が晴れやかになりました。この桜のクリームの香りを感じるたび、冬でも北海道ももう春なのかと、錯覚してしまいます（笑）
+						</p>
+					</div>
+					<div class="lp-voice__innerFlexBox">
+						<img src="img/lp-voice__innerFlexBoxImg02.png" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerFlexBoxImg lp-voice__innerFlexBoxImg02">
+						<h3 class="lp-voice__innerFlexBoxName">道外代表（東京都）　東川夏美さん（仮名）</h3>
+						<p class="lp-voice__innerFlexBoxtext">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
+					</div>
 				</div>
 			</div>
 			<small class="lp-voice__annotation">※このインタビュー及び名前は架空のものです</small>
@@ -231,25 +235,26 @@
 		</section>
 		<section id="sales" class="lp-sales">
 			<div class="lp-sales__inner">
-				<div class="lp-sales__innerTbox">
-					<h2 class="lp-sales__innerTboxHead">
-						北の春　ハンドクリーム
-					</h2>
-					<p class="lp-sales__innerTboxText">通販価格1500円（税込・送料込み）
-						2本以上ご購入の場合100円引き<br>
-						（1本あたり1500円→1400円）<br>
-						店頭参考価格：1300円</p>
-					<p class="lp-sales__innerTboxText">
-						※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
-（6本以上注文する場合は再度申し込み願います）
-					</p>
-					<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
+				<div class="lp-sales__innerText">
+					<div class="lp-sales__innerTextBox">
+						<h2 class="lp-sales__innerTextBoxHead">
+							北の春　ハンドクリーム
+						</h2>
+						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）
+							2本以上ご購入の場合100円引き<br>
+							（1本あたり1500円→1400円）<br>
+							店頭参考価格：1300円</p>
+						<p class="lp-sales__innerTextBoxText">
+							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
+	（6本以上注文する場合は再度申し込み願います）
+						</p>
+						<a href="#" class="sw-btn buy pc"><span class="sw-btn__inner">ご購入はこちら</span></a>
+					</div>					
 				</div>
 				<div class="lp-sales__innerIbox">
-					<img src="img/handcream.png" class="lp-sales__innerIboximg">
+					<img src="img/handcream.png" class="lp-sales__innerIboxImg">
 				</div>
 			</div>
-
 		</section>
 	</main>
 	<footer class="st-footer">
