--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
 						<h2 class="lp-sales__innerTextBoxHead">
 							北の春　ハンドクリーム
 						</h2>
-						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）
-							2本以上ご購入の場合100円引き<br>
-							（1本あたり1500円→1400円）<br>
+						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）<br>
+							2本以上ご購入の場合(1本当たり<span class="lp-sales__innerTextBoxTextThrough">1500円</span>→<span class="lp-sales__innerTextBoxTextBargein">1400円</span>）<br>
 							店頭参考価格：1300円</p>
 						<p class="lp-sales__innerTextBoxText">
 							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
@@ -191,14 +190,14 @@
 					<div class="lp-voice__innerFlexBox">
 						<img src="img/lp-voice__innerFlexBoxImg01.png" alt="北海道代表　北野春子さん（仮名）" class="lp-voice__innerFlexBoxImg lp-Evoice__innerFlexBoxImg01">
 						<h3 class="lp-voice__innerFlexBoxName">北海道代表　北野春子さん（仮名）</h3>
-						<p class="lp-voice__innerFlexBoxtext">
+						<p class="lp-voice__innerFlexBoxText">
 							手の乾燥と湿疹に悩まされていた私にとって、冬は「嫌い」以外の何物でもありませんでした。北海道の冬、長すぎますよね（泣）しかしこのクリームが、私の冬に対するイメージを変えてくれました。手がすべすべになって手荒れがなくなった分、心が晴れやかになりました。この桜のクリームの香りを感じるたび、冬でも北海道ももう春なのかと、錯覚してしまいます（笑）
 						</p>
 					</div>
 					<div class="lp-voice__innerFlexBox">
 						<img src="img/lp-voice__innerFlexBoxImg02.png" alt="道外代表（東京都）　東川夏美さん（仮名）" class="lp-voice__innerFlexBoxImg lp-voice__innerFlexBoxImg02">
 						<h3 class="lp-voice__innerFlexBoxName">道外代表（東京都）　東川夏美さん（仮名）</h3>
-						<p class="lp-voice__innerFlexBoxtext">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
+						<p class="lp-voice__innerFlexBoxText">東京はあまり雪は降りませんが、いつも手が冷えてパサついていました。最初は北海道のお土産として買いましたが、使ってみるとすっごくしっとり！しかもこの桜の香りは本州と少し違っていて…もう一度ほしいと思ったらオンラインでも販売されていて「やられた」という（笑）でも店舗販売が北海道だけなのはホントなので、やっぱり使うたび北海道（ココ大事）の春を感じています。</p>
 					</div>
 				</div>
 			</div>
@@ -207,27 +206,29 @@
 		<section id="shop" class="lp-shop">
 			<div class="lp-shop__inner">
 				<h2 class="lp-shop__innerHead"><img src="img/lp-shop__innerHead.png" alt="ショップ" class="lp-shop__innerHeadImg"></h2>
-				<div class="lp-shop__innerStore">
-					<p class="lp-shop__innerStoreText">
-						北海道の<br>
-						各コンビニエンスストア・<br>
-						ドラッグストア・<br>
-						PLALA・北海道ハンド・<br>
-						Raftなどにて販売しております。
-					</p>
-					<a class="sw-btn store pc">
-						<span class="sw-btn__inner">ショップを探す</span>
-					<a>
-				</div>
-				<div class="lp-shop__innerOnline">
-					<p class="lp-shop__innerOnlineText">
-						もちろんオンラインでも<br>
-						お買い求め<br>
-						いただけます。
-					</p>
-					<a class="sw-btn buy pc">
-						<span class="sw-btn__inner">ご購入はこちら</span>
-					</a>
+				<div class="lp-shop__innerFlex">
+					<div class="lp-shop__innerFlexStore">
+						<p class="lp-shop__innerFlexStoreText">
+							北海道の<br>
+							各コンビニエンスストア・<br>
+							ドラッグストア・<br>
+							PLALA・北海道ハンド・<br>
+							Raftなどにて販売しております。
+						</p>
+						<a class="sw-btn store pc">
+							<span class="sw-btn__inner">ショップを探す</span>
+						</a>
+					</div>
+					<div class="lp-shop__innerFlexOnline">
+						<p class="lp-shop__innerFlexOnlineText">
+							もちろんオンラインでも<br>
+							お買い求め<br>
+							いただけます。
+						</p>
+						<a class="sw-btn buy pc">
+							<span class="sw-btn__inner">ご購入はこちら</span>
+						</a>
+					</div>
 				</div>
 			</div>
 			<img src="img/sakura01_1.png" alt="桜01" class="lp-shop__Sakura lp-shop__Sakura01">
@@ -240,9 +241,8 @@
 						<h2 class="lp-sales__innerTextBoxHead">
 							北の春　ハンドクリーム
 						</h2>
-						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）
-							2本以上ご購入の場合100円引き<br>
-							（1本あたり1500円→1400円）<br>
+						<p class="lp-sales__innerTextBoxText">通販価格1500円（税込・送料込み）<br>
+							2本以上ご購入の場合(1本当たり<span class="lp-sales__innerTextBoxTextThrough">1500円</span>→<span class="lp-sales__innerTextBoxTextBargein">1400円</span>）<br>
 							店頭参考価格：1300円</p>
 						<p class="lp-sales__innerTextBoxText">
 							※送料の関係上、1回の購入につきおひとり様5本までと限らせていただきます。<br>
