--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header class="st-header">
     <div class="st-header__inner">
-        <h1 class="st-header__innerLogo"><a href="index.html" class="st-header__logoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__logoLinkImg"></a></h1>
+        <h1 class="st-header__innerLogo"><a href="index.html" class="st-header__innerLogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__innerLogoLinkImg"></a></h1>
         <nav class="st-header__innerNav">
             <ul class="st-header__innerNavList">
                 <li class="st-header__innerNavListItem"><a href="#" class="st-header__innerNavListItemLink">トップ</a></li>
@@ -25,7 +25,7 @@
 	</header>
 	<header class="st-headerSp">
     <div class="st-headerSp__inner">
-				<h1 class="st-headerSp__innerLogo"><a href="index.html" class="st-headerSp__logoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-header__logoLinkImg"></a></h1>
+				<h1 class="st-headerSp__innerLogo"><a href="index.html" class="st-headerSp__innerlogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-headerSp__innerLogoLinkImg"></a></h1>
 				<button id="hamburgerBtn" class="st-headerSp__innerButton"><span class="st-headerSp__innerButtonBar"></span></button>
 		</div>
 		<div class="st-headerSpMenu">
@@ -37,7 +37,7 @@
 					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">お客様の声</a></li>
 					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">ショップ</a></li>
 				</ul>
-				<a class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></あ>
+				<a class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></a>
 				<div class="st-headerSpMenuNavSns"><a href="" class="st-headerSpMenuNavSnsLink"><img src="" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="" class="st-headerSpMenuNavSnsLink"><img src="" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
 			</nav>
 		</div>
@@ -74,7 +74,7 @@
 			<div class="lp-winter__inner">
 				<div class="lp-winter__inner">
 					<div class="lp-winter__innerBox">
-						<h2 class="lp-winter__innerBoxHead"><img src="img/lp-winter__innerBoxHeadImg.png" alt="～北海道の春は、遠い～" class="lp-winter__innerBoxHeadImg"></h2>
+						<h2 class="lp-winter__innerBoxHead"><img src="img/lp-winter__innerBoxHeadImg.png" alt="～北海道の春は、遠い～" class="lp-winter__innerBoxHeadImg"><img src="img/lp-winter__innerBoxHeadImgTb.png" alt="～北海道の春は、遠い～" class="lp-winter__innerBoxHeadImgTb"></h2>
 						<p class="lp-winter__innerBoxText">北海道は日本の中で最も冬が長く、<br>
 							手荒れの季節も最も長いのです。</p>
 						<p class="lp-winter__innerBoxText">もちろん桜も、咲くのが最も遅い。<br>
@@ -100,6 +100,7 @@
 					<div class="lp-catch__innerTextBox">
 					<h2 class="lp-catch__innerTextBoxHead">
 							<img src="img/lp-catch__innerTboxHeadImg.png" alt="手から、春を感じてみませんか。" class="lp-catch__innerTextBoxHeadImg">
+							<img src="img/lp-catch__innerTboxHeadImgTb.png" alt="手から、春を感じてみませんか。" class="lp-catch__innerTextBoxHeadImgTb">
 						</h2>
 						<p class="lp-catch__innerTextBoxText">
 						冬を感じさせる手荒れをなくすと同時に、<br>
@@ -149,7 +150,7 @@
 		</section>
 		<section id="features" class="lp-features">
 			<div class="lp-features__inner">
-				<h2 class="lp-features__innerHead"><img src="img/lp-features__innerHeadImg.png" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
+				<h2 class="lp-features__innerHead"><img src="img/lp-features__innerHeadImg.png" class="lp-features__innerHeadImg" alt="「北の春 ハンドクリーム」３つの特徴"><img src="img/lp-features__innerHeadImgTb.png" class="lp-features__innerHeadImgTb" alt="「北の春 ハンドクリーム」３つの特徴"></h2>
 
 				<div class="lp-features__innerFlex">
 					<div class="lp-features__innerFlexBox lp-features__innerFlexBox01">
