header footer sp改修

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<header class="st-headerSp">
     <div class="st-headerSp__inner">
 				<h1 class="st-headerSp__innerLogo"><a href="index.html" class="st-headerSp__innerlogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-headerSp__innerLogoLinkImg"></a></h1>
-				<button id="hamburgerBtn" class="st-headerSp__innerButton"><span class="st-headerSp__innerButtonBar"></span></button>
+				<button id="hamburgerBtn" class="st-headerSp__innerBtn"><span class="st-headerSp__innerBtnBar"></span></button>
 		</div>
 		<div class="st-headerSpMenu">
 			<nav class="st-headerSpMenuNav">
@@ -106,7 +106,7 @@
 						冬を感じさせる手荒れをなくすと同時に、<br>
 							気分だけ先に春の桜の香りを味わってもらいたい…<br>
 							その願いで生まれたのが<br>
-							「北の春　ハンドクリーム」です。
+							<strong class="lp-catch__innerTextBoxTextStrong">「北の春　ハンドクリーム」</strong>です。
 						</p>
 						<p class="lp-catch__innerTextBoxText">
 							北海道の桜の香りと、<br>
