--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 				<h1 class="st-headerSp__innerLogo"><a href="index.html" class="st-headerSp__innerlogoLink"><img src="img/logo.png" alt="北の春 ハンドクリーム" class="st-headerSp__innerLogoLinkImg"></a></h1>
 				<button id="hamburgerBtn" class="st-headerSp__innerBtn"><span class="st-headerSp__innerBtnBar"></span></button>
 		</div>
-		<div class="st-headerSpMenu">
+		<!-- <div class="st-headerSpMenu"> -->
+		<div class="st-headerSpMenu is-active">
 			<nav class="st-headerSpMenuNav">
 				<ul class="st-headerSpMenuNavList">
 					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">トップ</a></li>
@@ -38,7 +39,7 @@
 					<li class="st-headerSpMenuNavListItem"><a href="" class="st-headerSpMenuNavListItemLink">ショップ</a></li>
 				</ul>
 				<a class="sw-btn buy"><span class="sw-btn__inner">ご購入はこちら</span></a>
-				<div class="st-headerSpMenuNavSns"><a href="" class="st-headerSpMenuNavSnsLink"><img src="" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="" class="st-headerSpMenuNavSnsLink"><img src="" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
+				<div class="st-headerSpMenuNavSns"><a href="" class="st-headerSpMenuNavSnsLink"><img src="img/twitter.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a><a href="" class="st-headerSpMenuNavSnsLink"><img src="img/instagram.png" alt="" class="st-headerSpMenuNavSnsLinkImg"></a></div>
 			</nav>
 		</div>
 		<button id="closeBtn" class="nav-closebtn_wrap">
