mv位置まで終了

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="lp-mv__innerBox">
 					<h2 class="lp-mv__innerBoxHead"><img src="img/lp-mv__InnerBoxHeadImg.png" alt="さようなら、冬
 						こんにちは、春" class="lp-mv__innerBoxHeadImg"></h2>
-					<p class="lp-mv__innerBoxText">手から先に訪れる、北海道のソメイヨシノと<br>
+					<p class="lp-mv__innerBoxText">手から先に訪れる、<br class="sw-br--sp">北海道のソメイヨシノと<br>
 						オオヤマザクラの春の香り</p>
 				</div>
 			</div>
